<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ValidateUser">

    <TextView
        android:id="@+id/Validate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/UserValidation"
        android:textSize="50dp"
        android:textStyle="bold"
        android:layout_margin="15dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/validation_message"
        android:textSize="25dp"
        android:textColor="@color/red"
        android:layout_margin="15dp"

        />

    <TextView
        android:id="@+id/nationalIdLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Please enter your National ID:"
        android:textSize="24sp"
        android:layout_margin="12dp"
        android:layout_marginBottom="8dp" />

    <EditText
        android:id="@+id/nationalIdEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:hint="Enter your National ID"
        android:importantForAccessibility="yes"
        android:inputType="text"
        android:minHeight="48dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/validate_btn"
        android:text="@string/validate_btn"
        />


</LinearLayout>